welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:9: error: ';' expected but integer literal found.
    	res1 = die 1 +1
                   ^